Fixing CSS by removing duplicate or conflicting CSS from App.css file. All CSS was split into page-specific stylesheets for readability and ease. Minor adjustments to wording of About Me page text.

--- a/portfolio/src/styles/portfolio.css
+++ b/portfolio/src/styles/portfolio.css
@@ -28,7 +28,7 @@
   .projectCardImage {
     width: 100%;
     /* max-width: 576px; */
-    height: 200px;
+    height: auto;
     object-fit: cover;
     flex-shrink: 0;
   }
